# python-learnings

./: .gitignore  pylintrc.toml
graphs/: bfs.py  dfs.py  dijkstra.py  traveling-salesperson.py
oscar-films/: category_prompts.py  data.py  data_interface.py  genre_prompts.py  main.py  name_prompts.py  notes.txt  prompts.py  pyproject.toml  selection_prompts.py  shared_prompts.py  utils.py  validators.py
tic-tac-toe/: board.py  game.py  main.py  utils.py
