[project]
name = "oscar-films"
version = "1.0.0"
description = "98th Academy Awards film recommendations"
requires-python = ">=3.14.0"
dependencies = []

[project.optional-dependencies]
dev = [
    "black~=26.1.0",
    "flake8~=7.3.0"
]

[tool.black]
line-length = 88

[tool.pylint]
disable = "missing-function-docstring, missing-module-docstring, too-many-lines"
